Support NT VFAT lower case flags.

PR:		8383
(Mostly) Submitted by:	Carl Mascott <cmascott@world.std.com>

Former-commit-id: 5a7e5f0cec20ee38c3a413ff54224c8c79e8a955