sys/fs/msdosfs/direntry.h
@@ -1,6 +1,6 @@
 begin_unit|revision:0.9.5;language:C;cregit-version:0.0.1
 begin_comment
-comment|/*	$Id: direntry.h,v 1.11 1998/02/24 14:13:08 ache Exp $ */
+comment|/*	$Id: direntry.h,v 1.12 1998/02/26 06:45:42 msmith Exp $ */
 end_comment
 
 begin_comment
@@ -92,12 +92,19 @@ name|ATTR_ARCHIVE
 value|0x20
 comment|/* file is new or modified */
 name|u_int8_t
-name|deReserved
-index|[
-literal|1
-index|]
+name|deLowerCase
 decl_stmt|;
-comment|/* reserved */
+comment|/* NT VFAT lower case flags */
+define|#
+directive|define
+name|LCASE_BASE
+value|0x08
+comment|/* filename base in lower case */
+define|#
+directive|define
+name|LCASE_EXT
+value|0x10
+comment|/* filename extension in lower case */
 name|u_int8_t
 name|deCHundredth
 decl_stmt|;
